# CinMatch

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/middleware/: rate_limiter.py
backend/shared/: redis_client.py  sliding_window.lua
backend/src/: config.py  movie_vectors.npz  movies.pkl  recomender.py  validators.py  vectorizer.pkl
frontend/: app.js  index.html  style.css
