[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pydantic-settings>=2.0.0",
    "redis[hiredis]>=8.0.1",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
